# IWR-Project-Effective-Software-Testing

./: .gitignore  .pre-commit-config.yaml  .pytensorrc  README.md  calc_gmt_by_ssa.py  create_masks.py  create_runscripts.sh  create_submit.py  merge_cfact.py  merge_files.sh  pyproject.toml  requirements.txt  run_estimation.py  run_single_cell.py  sanity_checks.sh  settings.py  setup.cfg  setup.py  submit_calc_gmt_by_ssa.sh  versioneer.py  write_netcdf.py
.github/workflows/: build_and_testing.yml  dependabot_automerge.yml  pre-commit.yml
attrici/: _version.py  const.py  datahandler.py  distributions.py  estimator.py  fourier.py  models.py  postprocess.py
attrici/sanity_check/: __init__.py  count_replaced_values.py  estimation_quality_check.py  merge_files.py  sanity_check.py  visual_check.py
config/: theanorc
jupyter_notebooks/: Test writing parameters into a single file.ipynb  overview_interpolation.ipynb
postprocessing/: change_local_vars.sh  create_tasmin_tasmax.py  how_to_postprocess.md  make_symlinks.sh  split_decadal.sh
preprocessing/: calc_gmt_by_ssa.py  create_tasrange_tasskew.py  merge_data.py  submit_calc_gmt_by_ssa.sh  submit_subset_data.sh  subset_data.py
tests/: test_demo.py
tests/test_data/input/ERA5/00003/: df_1.csv  df_2.csv  dimensions.json
